--- a/app/phpstan-tests.neon
+++ b/app/phpstan-tests.neon
@@ -8,7 +8,7 @@ parameters:
     doctrine:
         objectManagerLoader: './build/phpstan/doctrine-orm-bootstrap.php'
     autoload_files:
-        - './bin/.phpunit/phpunit-8.3-0/vendor/autoload.php'
+        - './vendor/bin/.phpunit/phpunit-8.3-0/vendor/autoload.php'
     ignoreErrors:
 #        - '#^Service "[^"]+" is private.$#'
         - '#^Access to an undefined property Prophecy\\Prophecy\\ObjectProphecy<[^"]+>::[^"]+.$#'
