Update to Symfony 5.1

--- a/app/composer.json
+++ b/app/composer.json
@@ -13,36 +13,35 @@
         "phpdocumentor/reflection-docblock": "^4.3",
         "ramsey/uuid-doctrine": "^1.6",
         "sensio/framework-extra-bundle": "^5.5",
-        "symfony/asset": "5.0.*",
-        "symfony/console": "5.0.*",
-        "symfony/dotenv": "5.0.*",
-        "symfony/expression-language": "5.0.*",
+        "symfony/asset": "5.1.*",
+        "symfony/console": "5.1.*",
+        "symfony/dotenv": "5.1.*",
+        "symfony/expression-language": "5.1.*",
         "symfony/flex": "^1.6",
-        "symfony/form": "5.0.*",
-        "symfony/framework-bundle": "5.0.*",
-        "symfony/http-client": "5.0.*",
-        "symfony/intl": "5.0.*",
-        "symfony/mailer": "5.0.*",
+        "symfony/form": "5.1.*",
+        "symfony/framework-bundle": "5.1.*",
+        "symfony/http-client": "5.1.*",
+        "symfony/intl": "5.1.*",
+        "symfony/mailer": "5.1.*",
         "symfony/monolog-bundle": "^3.5",
-        "symfony/notifier": "5.0.*",
-        "symfony/process": "5.0.*",
-        "symfony/property-access": "5.0.*",
-        "symfony/property-info": "5.0.*",
-        "symfony/security-bundle": "5.0.*",
-        "symfony/serializer": "5.0.*",
-        "symfony/string": "5.0.*",
-        "symfony/translation": "5.0.*",
-        "symfony/twig-bundle": "5.0.*",
-        "symfony/validator": "5.0.*",
-        "symfony/web-link": "5.0.*",
+        "symfony/notifier": "5.1.*",
+        "symfony/process": "5.1.*",
+        "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
+        "symfony/security-bundle": "5.1.*",
+        "symfony/serializer": "5.1.*",
+        "symfony/string": "5.1.*",
+        "symfony/translation": "5.1.*",
+        "symfony/twig-bundle": "5.1.*",
+        "symfony/validator": "5.1.*",
+        "symfony/web-link": "5.1.*",
         "symfony/webpack-encore-bundle": "^1.7",
-        "symfony/yaml": "5.0.*",
+        "symfony/yaml": "5.1.*",
         "twig/extra-bundle": "^3.0",
         "twig/twig": "^3.0"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
-        "easycorp/easy-log-handler": "^1.0",
         "fzaninotto/faker": "^1.9",
         "jangregor/phpstan-prophecy": "^0.6",
         "liip/test-fixtures-bundle": "^1.6",
@@ -55,14 +54,14 @@
         "roave/security-advisories": "dev-master",
         "slevomat/coding-standard": "^6.2",
         "squizlabs/php_codesniffer": "^3.5",
-        "symfony/browser-kit": "5.0.*",
-        "symfony/css-selector": "5.0.*",
-        "symfony/debug-bundle": "5.0.*",
+        "symfony/browser-kit": "5.1.*",
+        "symfony/css-selector": "5.1.*",
+        "symfony/debug-bundle": "5.1.*",
         "symfony/maker-bundle": "^1.14",
-        "symfony/phpunit-bridge": "5.0.*",
-        "symfony/stopwatch": "5.0.*",
-        "symfony/var-dumper": "5.0.*",
-        "symfony/web-profiler-bundle": "5.0.*"
+        "symfony/phpunit-bridge": "5.1.*",
+        "symfony/stopwatch": "5.1.*",
+        "symfony/var-dumper": "5.1.*",
+        "symfony/web-profiler-bundle": "5.1.*"
     },
     "config": {
         "preferred-install": {
@@ -125,12 +124,12 @@
             "@phpstan-src",
             "@phpstan-tests"
         ],
-        "tests": "@php vendor/bin/simple-phpunit",
-        "unit": "@php vendor/bin/simple-phpunit --testsuit unit",
-        "integration": "@php vendor/bin/simple-phpunit --testsuit integration",
-        "functional": "@php vendor/bin/simple-phpunit --testsuit functional",
-        "code-coverage": "@php vendor/bin/simple-phpunit --coverage-html coverage",
-        "codecov": "@php vendor/bin/simple-phpunit --coverage-clover coverage/coverage.xml",
+        "tests": "@php bin/phpunit",
+        "unit": "@php bin/phpunit --testsuit unit",
+        "integration": "@php bin/phpunit --testsuit integration",
+        "functional": "@php bin/phpunit --testsuit functional",
+        "code-coverage": "@php bin/phpunit --coverage-html coverage",
+        "codecov": "@php bin/phpunit --coverage-clover coverage/coverage.xml",
         "phpstan": [
             "@php bin/console cache:warmup --env=dev",
             "@php bin/console cache:warmup --env=test",
@@ -146,7 +145,7 @@
     "extra": {
         "symfony": {
             "allow-contrib": false,
-            "require": "5.0.*"
+            "require": "5.1.*"
         }
     }
 }
