--- a/app/phpcs.xml.dist
+++ b/app/phpcs.xml.dist
@@ -119,5 +119,6 @@
     <file>tests/</file>
 
     <exclude-pattern>src/Kernel.php$</exclude-pattern>
+    <exclude-pattern>tests/bootstrap.php$</exclude-pattern>
 
 </ruleset>
