--- a/.github/workflows/actions.yml
+++ b/.github/workflows/actions.yml
@@ -55,5 +55,6 @@ jobs:
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1
       with:
-        token: ${{ secrets.CODECOV_TOKEN }}
         file: ./app/coverage/coverage.xml
+        fail_ci_if_error: true
+
