--- a/app/composer.json
+++ b/app/composer.json
@@ -42,6 +42,7 @@
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.3",
+        "ergebnis/phpstan-rules": "^0.15.0",
         "fzaninotto/faker": "^1.9",
         "jangregor/phpstan-prophecy": "^0.6",
         "liip/test-fixtures-bundle": "^1.6",
