--- a/app/phpstan-tests.neon
+++ b/app/phpstan-tests.neon
@@ -12,5 +12,14 @@ parameters:
     excludes_analyse:
         - './tests/bootstrap.php'
     ignoreErrors:
+        # The following ignored errors are from "ergebnis/phpstan-rules" and are too strict.
+        - '#^Class "[^"]+" is not allowed to extend "[^"]+".$#'
+        - '#^Anonymous class is not allowed to extend "[^"]+".$#'
+        - '#^Method [^"]+ has parameter [^"]+ with a nullable type declaration.$#'
+        - '#^Method [^"]+ has a nullable return type declaration.$#'
+        - '#^Method [^"]+ has a parameter [^"]+ with a type declaration of Psr\\Container\\ContainerInterface, but containers should not be injected.$#'
+        - '#^Method [^"]+ is not final, but since the containing class is abstract, it should be.$#'
+        # Misc
 #        - '#^Service "[^"]+" is private.$#'
         - '#^Access to an undefined property Prophecy\\Prophecy\\ObjectProphecy<[^"]+>::[^"]+.$#'
+
