--- a/app/phpstan.neon
+++ b/app/phpstan.neon
@@ -8,6 +8,17 @@ parameters:
     doctrine:
         objectManagerLoader: './build/phpstan/doctrine-orm-bootstrap.php'
     excludes_analyse:
+        - './src/Kernel.php'
         - './src/Migrations/*'
     checkGenericClassInNonGenericObjectType: false
+    ignoreErrors:
+        # The following ignored errors are from "ergebnis/phpstan-rules" and are too strict.
+        - '#^Class "[^"]+" is not allowed to extend "[^"]+".$#'
+        - '#^Class [^"]+ is neither abstract nor final.$#'
+        - '#^Constructor in [^"]+ has parameter [^"]+ with default value.$#'
+        - '#^Method [^"]+ has a nullable return type declaration.$#'
+        - '#^Method [^"]+ has parameter [^"]+ with a nullable type declaration.$#'
+        - '#^Method [^"]+ has parameter [^"]+ with null as default value.$#'
+        - '#^Method [^"]+ is not final, but since the containing class is abstract, it should be.$#'
+        #- '#^Control structures using switch should not be used.$#'
 
