--- a/codecov.yml
+++ b/codecov.yml
@@ -9,3 +9,7 @@ coverage:
                 threshold: 1%
         patch: off
         changes: off
+
+ignore:
+    - "app/src/Validator/Constraints"
+
