--- a/docker/app/php.ini
+++ b/docker/app/php.ini
@@ -16,3 +16,6 @@ opcache.max_accelerated_files = 20000
 opcache.memory_consumption = 256
 realpath_cache_size = 4096K
 realpath_cache_ttl = 600
+
+# OPcache dev
+opcache.validate_timestamps = 1
